Fix reader not taking full height on iOS

--- a/src/scss/components/_reader.scss
+++ b/src/scss/components/_reader.scss
@@ -1,7 +1,7 @@
 .reader-wrapper {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	flex: 1 1 auto;
 
 	.header {
 		flex: 0 0 30px;
